# sapipiru

omake/: unchi-daisuki.docx  ~$chi-daisuki.docx
sapipiru-rust/: Cargo.toml
sapipiru-rust/src/: css_parser.rs  html_parser.rs  main.rs  render_tree.rs  ui.rs
